2000-07-17  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_crypto.c: Crypto key stuff
	* ntpd/ntp_proto.c: pubkey -> pubkey.ptr
	* ntpd/ntp_control.c (ctl_putpeer): fstamp -> pubkey.fstamp
	* ntpd/ntp_peer.c: 
	* include/ntpd.h: 
	* include/ntp_types.h: 
	* include/ntp_request.h: 
	* include/ntp_crypto.h: 
	* include/ntp_control.h: 
	* include/ntp.h: Type cleanup
	From: Dave Mills

2000-07-14  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ElectricFence/Makefile.am (check-local): Don't run the tests if
	we didn't build the programs...
	(check-local): Same, but watch the return codes...

	* ElectricFence/page.c: #include config.h if it's there.
	Properly handle the sys_errlist declaration.

	* html/ntpq.htm: 
	* html/index.htm: 
	* html/debug.htm: 
	* html/authopt.htm: 
	Reality check.
	From Dave Mills

2000-07-13  Harlan Stenn  <stenn@whimsy.udel.edu>

	* Makefile.am (SUBDIRS): Added ElectricFence
	* configure.in (AC_CONFIG_FILES): Added ElectricFence support
	* ElectricFence: Imporpted.

2000-07-12  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp_genkeys.c (main): Cleanup
	* ntpd/refclock_wwv.c (wwv_qrz): sqrt -> SQRT
	* ntpd/refclock_chu.c (chu_rf): sqrt -> SQRT
	* ntpd/ntpd.c (set_process_priority): Disable  high-priority for now.
	PUBKEY cleanup.
	* ntpd/ntp_timer.c: sys_revoketime cleanup.
	* ntpd/ntp_proto.c (receive): PUBKEY cleanup.  Comment and code
	cleanup.
	(process_packet): Comment and code (PUBKEY) cleanup.
	(peer_xmit): Comment and code cleanup.
	(fast_xmit): Comment and code cleanup.
	* ntpd/ntp_peer.c (expire_all): revoketime cleanup.  PUBKEY cleanup.
	* ntpd/ntp_crypto.c: Comment reorg.  DH parameters are now
	file-static instead of local to subroutines.
	(make_keylist): peer->pcookie.key cleanup/fix
	(crypto_recv): Subroutine documentation cleanup, other cleanup
	(crypto_xmit): Cleanup/document.
	(crypto_setup): Cleanup/document.
	(crypto_agree): Cleanup/document.
	(crypto_rsa): now static